<resources>
    <string name="mapia">mapia</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_map">MapActivity</string>
        <string name="app_name">mapia</string>
        <string name="item">Item #</string>
        <string name="facebook_app_id">1191701004189291</string>
        <string name="facebook_app_sercret">d94a1510b80ff04334357f3ad79b3460</string>
        <string name="twitter_consumer_key">pgHFETv10XzCbdN9IEiFajszC</string>
        <string name="twitter_consumer_secret">5QhB4AdyjrMp0zWhEWmIWap3JHm96IcMl5PFUMDBQvfrIAGMQi</string>
        <string name="instagram_client_id">036d1554ace5461b973bf54e5c41f854</string>
        <string name="instagram_client_secret">5b651079994e43b9aca4e248d9b9a148</string>
        <string name="vk_app_id">4352648</string>
        <string name="error">Error!</string>
        <string name="json_error">JSON Error!</string>
        <string name="close">Close</string>
        <string name="message">Message</string>
        <string name="title">Title</string>
        <string name="progress">Progress</string>
        <string name="ok">Okay</string>
        <string name="set">Set</string>
        <string name="cancel">취소</string>
        <string name="sns_link">사용중인 다른 SNS와 연동할까요?</string>
        <string name="sns_welcome"><b>환영합니다!</b></string>
        <string name="sns_welcome_notice">MAPIA를 즐기기 위해 아래 내용을 설정해주세요~</string>
        <string name="progress_save_message">Saving</string>
        <string name="social_facebook_button">{icon-facebook} Facebook login</string>
        <string name="social_twitter_button">{icon-twitter} Twitter login</string>
        <string name="social_google_button">{icon-gplus} G+ login</string>
        <string name="social_instagram_button">{icon-instagram} Vk login</string>
        <string name="continuous_picture">continuous-picture</string>
        <string name="auto">auto</string>
        <string name="menu_done_item">Done</string>
        <string name="menu_list_item">List</string>
        <string name="menu_photo">Photo</string>
        <string name="menu_load">Load</string>
        <string name="menu_save">Save</string>
        <string name="menu_settings">Settings</string>
        <string name="menu_delete_item">Delete</string>
        <string name="menu_clear">Clear</string>
        <string name="menu_erase">Erase</string>
        <string name="menu_pencil">Pencil</string>
        <string name="menu_color">Color</string>
        <string name="menu_size">Size</string>
        <string name="menu_refresh">Refresh</string>
        <string name="menu_marker">markers</string>
        <string name="menu_share_widget">Share</string>
        <string name="menu_share">Share</string>
        <string name="action_settings">Options</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="divider">Divider</string>
        <string name="delete_friend">Remove friend</string>
        <string name="add_friend">Invite</string>
        <string name="search_friend">Search</string>
        <string name="activity_signup_clause">계속 진행할 시 <b>개인정보취급방침</b>을 읽었으며 <b>서비스 약관</b>에\n동의하신 것으로 간주됩니다.</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="download">Download</string>
    <string name="resume">Resume</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing..</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="size">Size</string>
    <string name="key">Key</string>
    <string name="nothing_found_to_open_file">
        There\'s nothing that can open this type of file
    </string>
    <string name="files_to_be_uploaded">Files to be uploaded:</string>
    <string name="transfers">Transfers:</string>
    <string name="open">Open</string>
    <string name="upload_video">Upload A Video</string>
    <string name="upload_image">Upload An Image</string>
    <string name="create_bucket">Create bucket</string>
    <string name="delete_bucket">Delete bucket</string>
        <string name="access_sd_fail">"Couldn't access SD card."</string>
        <string name="accessibility_back_to_first_level">Close setting controls</string>
        <string name="accessibility_camera_picker">Front and back camera switch</string>
        <string name="accessibility_check_box">%1$s check box</string>
        <string name="accessibility_decrement">Decrease %1$s</string>
        <string name="accessibility_increment">Increase %1$s</string>
        <string name="accessibility_menu_button">Menu button</string>
        <string name="accessibility_mode_picker">Camera, video, or panorama selector</string>
        <string name="accessibility_pause_video">Pause video</string>
        <string name="accessibility_play_video">Play video</string>
        <string name="accessibility_reload_video">Reload video</string>
        <string name="accessibility_review_cancel">Review cancel</string>
        <string name="accessibility_review_ok">Review done</string>
        <string name="accessibility_review_retake">Review retake</string>
        <string name="accessibility_review_thumbnail">Most recent photo</string>
        <string name="accessibility_second_level_indicators">More setting controls</string>
        <string name="accessibility_shutter_button">Shutter button</string>
        <string name="accessibility_switch_to_camera">Switch to photo</string>
        <string name="accessibility_switch_to_new_panorama">Switch to new panorama</string>
        <string name="accessibility_switch_to_panorama">Switch to panorama</string>
        <string name="accessibility_switch_to_video">Switch to video</string>
        <string name="accessibility_time_bar">Video player time bar</string>
        <string name="accessibility_zoom_control">Zoom control</string>
        <string name="agreement">동의</string>
        <string name="approval">승인</string>
    <string name="auth_fail_and_retry_login">"기존 로그인 정보가 만료되어
재로그인 후 사용하실 수 있습니다."</string>
    <string name="bg_replacement_message">"Set your device down.
Step out of view for a moment."</string>
        <string name="block">차단</string>
        <string name="camera_disabled">Camera has been disabled because of security policies.</string>
        <string name="camera_error_1">지원하지 않는 코덱입니다</string>
        <string name="camera_error_2">영상 파일에 오류가 있어 등록이 불가능합니다</string>
        <string name="camera_error_3">휴대폰 저장공간 확인 후 재시도 해주시기 바랍니다</string>
        <string name="camera_error_4">일시적인 오류로 실패하였습니다</string>
        <string name="camera_error_title">Camera error</string>
        <string name="camera_label">Camera</string>
        <string name="camera_menu_more_label">MORE OPTIONS</string>
        <string name="camera_menu_settings_label">SETTINGS</string>
        <string name="camera_not_support">카메라를 지원 하지 않는 단말입니다</string>
        <string name="cancel_posting">포스팅 중지</string>
    <string name="cancel_posting_desc">"작성 중이던 내용은 저장되지 않습니다.
중지하시겠습니까?"</string>
        <string name="cannot_connect_camera">"Can't connect to the camera."</string>
        <string name="capital_off">OFF</string>
        <string name="capital_on">ON</string>
        <string name="clear_effects">Clear effects</string>
        <string name="clip">동영상</string>
    <string name="coach_home_01">"지금 가장 이슈가 되고 있는
사진이나 사람들을 만나보세요"</string>
    <string name="coach_home_02">"인기있는 태그를 둘러보고
내 관심사를 찾아보세요"</string>
        <string name="coach_location">위치를 추가할 수 있습니다</string>
    <string name="coach_recommendedTag">"내가 많이 사용하는 해시태그를
추천해드립니다"</string>
        <string name="coach_swipe_action">다음 사진을 편하게 넘겨볼 수 있어요</string>
        <string name="coach_tag">해시태그를 입력할 수 있습니다</string>
        <string name="coach_taggallery_01">관심 있는 태그를 팔로우 해보세요</string>
    <string name="coach_taggallery_02">"팔로우한 태그 / 유저의 포스팅은
마이피드에서 볼 수 있어요"</string>
        <string name="com_facebook_choose_friends">Choose Friends</string>
        <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
        <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
        <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
        <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
        <string name="com_facebook_like_button_liked">Liked</string>
        <string name="com_facebook_like_button_not_liked">Like</string>
        <string name="com_facebook_loading">Loading...</string>
        <string name="com_facebook_loginview_cancel_action">Cancel</string>
        <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
        <string name="com_facebook_loginview_log_out_action">Log out</string>
        <string name="com_facebook_loginview_log_out_button">Log out</string>
        <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
        <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
        <string name="com_facebook_logo_content_description">Facebook Logo</string>
        <string name="com_facebook_nearby">Nearby</string>
        <string name="myfeed_follow_following">팔로잉</string>
    <string name="myfeed_follow_no_data_01">"내가 팔로잉하는 유저가 없습니다
HOT USER에서 팔로잉할 유저를 찾아보세요"</string>
        <string name="myfeed_follow_no_data_02">HOT USER 보기</string>
        <string name="myfeed_tag_following_tag">팔로잉 태그</string>
    <string name="myfeed_tag_no_data_01">"팔로잉하는 태그가 없습니다
관심사를 검색하고 팔로잉해보세요"</string>
        <string name="myfeed_tag_no_data_02">관심 태그 찾기</string>
        <string name="pref_camcorder_settings_category">Camcorder settings</string>
        <string name="pref_camera_flashmode_default">auto</string>
        <string name="pref_camera_flashmode_title">Flash mode</string>
        <string name="pref_camera_focusmode_title">Focus mode</string>
        <string name="pref_camera_hdr_default">@string/setting_off_value</string>
        <string name="pref_camera_id_default">0</string>
        <string name="pref_camera_id_title">Choose camera</string>
        <string name="pref_camera_picturesize_title">Picture size</string>
        <string name="pref_camera_recordlocation_default">none</string>
        <string name="pref_camera_recordlocation_title">Store location</string>
        <string name="pref_camera_scenemode_default">auto</string>
        <string name="pref_camera_scenemode_entry_hdr">HDR</string>
        <string name="pref_camera_scenemode_title">Scene mode</string>
        <string name="pref_camera_settings_category">Camera settings</string>
        <string name="pref_camera_timer_default">0</string>
        <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
        <string name="pref_camera_timer_sound_title">Beep during countdown</string>
        <string name="pref_camera_timer_title">Countdown timer</string>
        <string name="pref_camera_video_flashmode_default">off</string>
        <string name="pref_camera_whitebalance_default">auto</string>
        <string name="pref_camera_whitebalance_title">White balance</string>
        <string name="pref_exposure_default">0</string>
        <string name="pref_exposure_title">Exposure</string>
        <string name="pref_video_quality_default">5</string>
        <string name="pref_video_quality_title">Video quality</string>
        <string name="pref_video_time_lapse_frame_interval_default">0</string>
        <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
        <string name="search_place_tab_title">장소</string>
        <string name="search_tag_tab_title">태그</string>
        <string name="search_tag_title">태그 검색</string>
        <string name="search_user_tab_title">유저</string>
</resources>