<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:ctitle="@string/pref_camera_settings_category" xmlns:camera="http://schemas.android.com/apk/res-auto">
    <IconListPreference camera:ctitle="@string/pref_camera_flashmode_title" camera:largeIcons="@array/camera_flashmode_largeicons" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:labelList="@array/pref_camera_flashmode_labels" />
    <IconListPreference camera:ctitle="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" />
    <IconListPreference camera:ctitle="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:labelList="@array/pref_camera_scenemode_labels" />
    <IconListPreference camera:ctitle="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:labelList="@array/pref_camera_whitebalance_labels" />
    <RecordLocationPreference camera:ctitle="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:labelList="@array/pref_camera_recordlocation_labels" />
    <ListPreference camera:ctitle="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" />
    <ListPreference camera:ctitle="@string/pref_camera_focusmode_title" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" camera:labelList="@array/pref_camera_focusmode_labels" />
    <IconListPreference camera:ctitle="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:labelList="@array/camera_id_labels" />
    <IconListPreference camera:ctitle="@string/pref_camera_scenemode_entry_hdr" camera:key="pref_camera_hdr_key" camera:defaultValue="@string/pref_camera_hdr_default" camera:entryValues="@array/pref_camera_hdr_entryvalues" camera:entries="@array/pref_camera_hdr_entries" camera:labelList="@array/pref_camera_hdr_labels" />
    <CountDownTimerPreference camera:ctitle="@string/pref_camera_timer_title" camera:key="pref_camera_timer_key" camera:defaultValue="@string/pref_camera_timer_default" />
    <ListPreference camera:ctitle="@string/pref_camera_timer_sound_title" camera:key="pref_camera_timer_sound_key" camera:defaultValue="@string/pref_camera_timer_sound_default" camera:entryValues="@array/pref_camera_timer_sound_entryvalues" camera:entries="@array/pref_camera_timer_sound_entries" />
</PreferenceGroup>