<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff9f9f9" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/fmt_header" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:id="@+id/fmt_prev_button" android:layout_width="46.0dip" android:layout_height="46.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/common_prev" />
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <com.mapia.custom.FontSettableTextView android:textSize="18.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myfeed_tag_following_tag" song:customFont="NanumBold" xmlns:song="http://schemas.android.com/apk/res-auto" />
        </LinearLayout>
        <LinearLayout android:layout_width="44.5dip" android:layout_height="53.0dip" />
    </LinearLayout>
    <LinearLayout android:background="#ffe6e6e6" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="-0.5dip" />
    <ListView android:id="@+id/fmt_listview" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" />
    <RelativeLayout android:id="@+id/fmt_nodata" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/fullbg_myfeed2" android:scaleType="centerCrop" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <com.mapia.custom.FontSettableTextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myfeed_tag_no_data_01" song:customFont="NanumRegular" xmlns:song="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@+id/fmt_go_home" android:background="#ff2c2c35" android:layout_width="fill_parent" android:layout_height="53.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="90.0dip">
                <com.mapia.custom.FontSettableTextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myfeed_tag_no_data_02" song:customFont="NanumRegular" xmlns:song="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>