<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#fff9f9f9" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@+id/fmf_header" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="53.0dip">
        <ImageView android:id="@+id/fmf_prev_button" android:layout_width="46.0dip" android:layout_height="46.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="3.5dip" android:src="@drawable/common_prev" />
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <com.mapia.custom.FontSettableTextView android:textSize="18.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/myfeed_follow_following" song:customFont="NanumBold" xmlns:song="http://schemas.android.com/apk/res-auto" />
        </LinearLayout>
        <LinearLayout android:layout_width="50.0dip" android:layout_height="53.0dip" />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/fmf_swiperefreshlayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/fmf_header">
        <ListView android:id="@+id/fmf_listview" android:background="#fff9f9f9" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" />
    </android.support.v4.widget.SwipeRefreshLayout>
    <RelativeLayout android:id="@+id/fmf_nodata" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="53.0dip">
        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/fullbg_myfeed2" android:scaleType="centerCrop" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <com.mapia.custom.FontSettableTextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myfeed_follow_no_data_01" song:customFont="NanumRegular" xmlns:song="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@+id/fmf_go_home" android:background="#ff2c2c35" android:layout_width="fill_parent" android:layout_height="53.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="90.0dip">
                <com.mapia.custom.FontSettableTextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myfeed_follow_no_data_02" song:customFont="NanumRegular" xmlns:song="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="#33808080" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@+id/fmf_header" />
</RelativeLayout>